samples/_failures_safe/1761639586_73b8ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bfbc90c4.c: In function ‘main’:
./samples/SAFE/__tmp_bfbc90c4.c:169:13: error: expected declaration or statement at end of input
  169 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_bfbc90c4.c:169:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bfbc90c4.c:169:13: error: expected declaration or statement at end of input
